various file and layout updates

--- a/_posts/2024-12-07-tdb-story.md
+++ b/_posts/2024-12-07-tdb-story.md
@@ -3,11 +3,9 @@ layout: post
 title: Tokyo Debunker Backstory
 date: 2024-12-07 00:00:00 +0300
 description: Tokyo Debunker Backstory
-img: 
+img: TDB-logo.png
 tags: [tdb, world, lore] # add tag
 ---
-
-
 
 There was an event at Darkwick called "The Clash" about one year ago. "The Clash" was started by an even called "The One-Eyed Sleeping Beauty Murder". 
 
