--- a/_posts/2024-12-07-tdb-staff.md
+++ b/_posts/2024-12-07-tdb-staff.md
@@ -3,7 +3,7 @@ layout: post
 title: Darkwick Staff
 date: 2024-12-07 00:00:00 +0300
 description: Darkwick Staff
-img: 
+img: TDB-logo.png 
 tags: [tdb, world, lore] # add tag
 ---
 
