--- a/_posts/2024-12-07-tdb-world.md
+++ b/_posts/2024-12-07-tdb-world.md
@@ -3,7 +3,7 @@ layout: post
 title: Tokyo Debunker World Lore
 date: 2024-12-07 00:00:00 +0300
 description: Tokyo Debunker World Lore
-img: 
+img: TDB-logo.png
 tags: [tdb, world, lore] # add tag
 ---
 
