--- a/_posts/2024-12-07-tdb-world.md
+++ b/_posts/2024-12-07-tdb-world.md
@@ -13,7 +13,7 @@ Ghouls are humans who made a pact with a demon, but consumed their demon instead
 
 Darkwick organizes students into multiple houses. There are currently 7 houses: Frostheim, Vegastrom, Jabberwock, Sinostra, Hotarubi, Obscuary, and Mortkranken. There are also three former houses Ultio, Clementia, and Dionysia.
 
-Each house has a captain and vice captain. The captain and vice captain are always ghouls. Every house aside from Jabberwock and Obscuary also has general students. Jabberwock and Obscuary have no general students. 
+Each house has a captain and vice-captain. The captain and vice-captain are always ghouls. Every house aside from Jabberwock and Obscuary also has general students. Jabberwock and Obscuary have no general students. 
 
 Frostheim is an ice castle. It's always cold and snowy there. The students in Frostheim usually come from rich and well known families.
 
