updated staff information

--- a/_posts/2024-12-07-tdb-staff.md
+++ b/_posts/2024-12-07-tdb-staff.md
@@ -7,10 +7,32 @@ img: TDB-logo.png
 tags: [tdb, world, lore] # add tag
 ---
 
-Name:
-Position:
-Hair:
-Eyes:
+Name: Cronelius
+Position: Chancellor
+Hair: teal
+Eyes: light blue
+Skin: pale
 Sex: M
 Age: 35
+Personality: 
+Notes:
+
+Name: Benkei
+Position: School Store Clerk
+Hair: navy blue
+Eyes: pale yellow
+Skin: pale
+Sex: M
+Age: 35
+Personality: 
+Notes:
+
+Name: Elias
+Position: Janitor
+Hair: grey
+Eyes: blue
+Skin: pale
+Sex: M
+Age: 35
+Personality: 
 Notes:
