udpates to staff info

--- a/_posts/2024-12-07-tdb-staff.md
+++ b/_posts/2024-12-07-tdb-staff.md
@@ -36,3 +36,44 @@ Sex: M
 Age: 35
 Personality: 
 Notes:
+
+Name: Dante
+Position: Professor
+Hair: grey
+Eyes: grey
+Skin: pale 
+Sex: M
+Age: 35
+Personality: 
+Notes: Professor Dante is in a wheelchair. Professor Dante is the advisor for Frostheim and Vegastrom. 
+
+Name: Hyde
+Position: Professor
+Hair: white
+Eyes: covered by blindfold
+Skin: pale
+Sex: M
+Age: 35
+Skin: pale
+Personality: 
+Notes: Professor Hyde is the advisor for Jabberwock and Sinostra.
+
+Name: Moby
+Position: Professor
+Hair: none
+Eyes: covered by mask that shows emotions
+Skin: purple 
+Sex: M
+Age: 35
+Personality: 
+Notes: Professor moby is an octopus creature. Professor Moby is the advisor for Hotarubi and Obscuary.
+
+Name: Nicholas
+Position: Professor
+Hair: brown
+Eyes: pale blue
+Skin: tan
+Sex: M
+Age: 35
+Personality: 
+Notes: Professor Nicholas is the advisor for Mortkranken and oversees operations at Darkwick General.
