updates to staff info

--- a/_posts/2024-12-07-tdb-staff.md
+++ b/_posts/2024-12-07-tdb-staff.md
@@ -7,7 +7,7 @@ img: TDB-logo.png
 tags: [tdb, world, lore] # add tag
 ---
 
-Name: Cronelius
+Name: Cornelius
 Position: Chancellor
 Hair: teal
 Eyes: light blue
@@ -15,7 +15,7 @@ Skin: pale
 Sex: M
 Age: 35
 Personality: 
-Notes:
+Notes: Cornelius is short. Cornelius is always surrounded by cats.
 
 Name: Benkei
 Position: School Store Clerk
