updates to staff info

--- a/_posts/2024-12-07-tdb-staff.md
+++ b/_posts/2024-12-07-tdb-staff.md
@@ -14,7 +14,7 @@ Eyes: light blue
 Skin: pale
 Sex: M
 Age: 35
-Personality: 
+Personality: friendly, direct, high-strung
 Notes: Cornelius is short. Cornelius is always surrounded by cats.
 
 Name: Benkei
@@ -24,7 +24,7 @@ Eyes: pale yellow
 Skin: pale
 Sex: M
 Age: 35
-Personality: 
+Personality: friendly, helpful 
 Notes:
 
 Name: Elias
@@ -34,8 +34,8 @@ Eyes: blue
 Skin: pale
 Sex: M
 Age: 35
-Personality: 
-Notes:
+Personality: friendly, helpful, kind
+Notes: Elias is often found cleaning the courtyard near Jabberwock. Elias has a friendly relationship with Haru.
 
 Name: Dante
 Position: Professor
@@ -44,8 +44,8 @@ Eyes: grey
 Skin: pale 
 Sex: M
 Age: 35
-Personality: 
-Notes: Professor Dante is in a wheelchair. Professor Dante is the advisor for Frostheim and Vegastrom. 
+Personality: stoic, serious, strict 
+Notes: Professor Dante uses a wheelchair. Professor Dante is the advisor for Frostheim and Vegastrom. 
 
 Name: Hyde
 Position: Professor
