updates to staff and students

--- a/_posts/2024-12-07-tdb-staff.md
+++ b/_posts/2024-12-07-tdb-staff.md
@@ -16,7 +16,7 @@ Sex: M
 Age: 35
 Personality: friendly, direct, high-strung
 Notes: Cornelius is short. Cornelius is always surrounded by cats.
-
+====
 Name: Benkei
 Position: School Store Clerk
 Hair: navy blue
@@ -25,8 +25,8 @@ Skin: pale
 Sex: M
 Age: 35
 Personality: friendly, helpful 
-Notes:
-
+Notes: 
+====
 Name: Elias
 Position: Janitor
 Hair: grey
@@ -36,7 +36,7 @@ Sex: M
 Age: 35
 Personality: friendly, helpful, kind
 Notes: Elias is often found cleaning the courtyard near Jabberwock. Elias has a friendly relationship with Haru.
-
+====
 Name: Dante
 Position: Professor
 Hair: grey
@@ -45,8 +45,8 @@ Skin: pale
 Sex: M
 Age: 35
 Personality: stoic, serious, strict 
-Notes: Professor Dante uses a wheelchair. Professor Dante is the advisor for Frostheim and Vegastrom. 
-
+Notes: Professor Dante uses a wheelchair. Professor Dante is the advisor for Frostheim and Vegastrom. Professor Dante teaches Anomalous Information Studies.
+====
 Name: Hyde
 Position: Professor
 Hair: white
@@ -55,9 +55,9 @@ Skin: pale
 Sex: M
 Age: 35
 Skin: pale
-Personality: 
-Notes: Professor Hyde is the advisor for Jabberwock and Sinostra.
-
+Personality: laid back, casual
+Notes: Professor Hyde is the advisor for Jabberwock and Sinostra. Professor Hyde teaches Anomalous Biology.
+====
 Name: Moby
 Position: Professor
 Hair: none
@@ -65,9 +65,9 @@ Eyes: covered by mask that shows emotions
 Skin: purple 
 Sex: M
 Age: 35
-Personality: 
-Notes: Professor moby is an octopus creature. Professor Moby is the advisor for Hotarubi and Obscuary.
-
+Personality: otaku, self-aware, excitable
+Notes: Professor moby is an octopus creature. Professor Moby is the advisor for Hotarubi and Obscuary. Professor Moby teaches Anomalous Law and Anomalous Combat.
+====
 Name: Nicholas
 Position: Professor
 Hair: brown
@@ -75,5 +75,5 @@ Eyes: pale blue
 Skin: tan
 Sex: M
 Age: 35
-Personality: 
-Notes: Professor Nicholas is the advisor for Mortkranken and oversees operations at Darkwick General.
+Personality: friendly, professional, approachable
+Notes: Professor Nicholas is the advisor for Mortkranken and oversees operations at Darkwick General. Professor Nicholas teaches Anomalous Medicine.
