udpates to world lore and anomalies pages

--- a/_posts/2024-12-07-tdb-world.md
+++ b/_posts/2024-12-07-tdb-world.md
@@ -36,3 +36,9 @@ Darkwick students are sent on missions to investigate anomalous activities. The 
 The remains of Clementia are a run down church on campus. When Clementia was used it housed students specializing in curses.
 
 The remains of Ultio are a prison for anomalies deemed too dangerous for human contact.
+
+Classrooms at Darkwick Academy include Potions Lab, Artifact Studies Room, Observatory, Occult Studies Room, Paranormal Newsroom, Undercoverology Lab, Folklore Studies Room, Enigmatology Lab, Folklore Studies Room, Enigmatology Lab, Herbology Lab, Cryptozoology Lab, Haunted Mansion, Verdant Library, Cat Museum.
+
+Darkwick students message and communicate through a cell phone app called WickChat.
+
+Darkwick reports important information through talking portraits, this system is called Masterpiece News.
